# DDHOR-V2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dllmain.cpp  vcpkg.json
Bot/Engine/: BotActions.h  Config.cpp  Config.h  Manager.cpp  Manager.h  Player.cpp  Player.h  Recorder.cpp  Recorder.h
Bot/Engine/internal/: LegacyDDHOR.cpp  LegacyDDHOR.h
Bot/Hooks/: HookManger.cpp  HookManger.h
Bot/Hooks/Gameplay/: CCScheduler.cpp  CCScheduler.h  GJGameLayer.cpp  GJGameLayer.h  PauseLayer.cpp  PauseLayer.h  PlayLayer.cpp  PlayLayer.h  UILayer.cpp  UILayer.h
Bot/Hooks/LevelLoading/: LevelLoading.cpp  LevelLoading.h
Bot/Hooks/Options/: MoreOptionsLayer.cpp  MoreOptionsLayer.h
Bot/Hooks/TextureLoading/: GameManager.cpp  GameManager.h
Cheats/: Bypass.cpp  Bypass.h  Speedhack.cpp  Speedhack.h
Dependencies/SimpleMemory/: SimpleMemory.h
Dependencies/fmt/: fmt.lib
Dependencies/fts/: fuzzymatch.cpp
Dependencies/gd/: gd.h
Dependencies/gd/text_input_nodes/: CCTextInputNode.h  TextInputDelegate.h
Dependencies/minhook/: MinHook.h  minhook.x32.lib
Dependencies/strings_hash/: strings_hash.h
GDTypes/: CheckpointObject.h  GJBaseGameLayer.h  GJEffectManager.h  PlayLayer.h  PlayerCheckpoint.h  PlayerObject.h
GameController/: GameController.cpp  GameController.h
IOManager/: STIO.cpp  STIO.h
IOManager/Keyboard/: KBHooks.cpp  KBHooks.h
STLoad/: STLoad.cpp  STLoad.h
Tests/: CMakeLists.txt  SerderTest.cc
UI/: PopupLayer.cpp  PopupLayer.h  TextboxUtils.cpp  TextboxUtils.h
UI/Gameplay/: FrameOverlay.cpp  FrameOverlayLayer.h  SpeedhackLayer.cpp  SpeedhackLayer.h  SyncLayer.cpp  SyncLayer.h
UI/Greeting/: Greeting.cpp  Greeting.h
UI/Menu/: BMenuLayer.cpp  BMenuLayer.h  LoadLayerDelegate.h  LoadMenuLayer.cpp  LoadMenuLayer.h  MenuConstants.h  RecordMenuLayer.cpp  RecordMenuLayer.h
UI/Widget/: ListWidget.cpp  ListWidget.h  LoadingButton.cpp  LoadingButton.h  ScalableMenuItemSprite.cpp  ScalableMenuItemSprite.h
src/: main.cpp
src/Bot/: Engine.cpp  Engine.h
src/Bot/Backend/: CmdExecuterLogic.h  FrameBackend.cpp  FrameBackend.h  XPosBackend.cpp  XPosBackend.h
src/Bot/Behaviour/: BotBehavior.cpp  BotBehavior.h
src/Bot/Commands/: BaseCommand.h  ClickCommands.cpp  ClickCommands.h
src/Bot/Deductor/: DerDeductor.cpp  DerDeductor.h  Validator.cpp  Validator.h
src/Bot/Deserializer/: Accessable.h  Deserialization.cpp  Deserialization.h  Deseriliazble.h  Legacy.cpp  Legacy.h  V2.cpp  V2.h
src/Bot/ExecLogic/: CmdExecuterLogic.cpp  CmdExecuterLogic.h  FrameBackend.cpp  FrameBackend.h  XPosBackend.cpp  XPosBackend.h
src/Bot/IExtractor/: IExtractor.h
src/ErrorChecking/: ChainedChecks.cpp  ChainedChecks.h  TextureVerifier.cpp  TextureVerifier.h  TypeChecking.cpp  TypeChecking.h
src/ErrorHandling/: DExceptions.cpp  DExceptions.h  Logger.cpp  Logger.h
src/GUI/: LevelLoader.cpp  LevelLoader.h
src/Loader/: TextureLoader.cpp  TextureLoader.h
(+46 files in other folders)
